TE-2528 Upgrade testing dependencies

--- a/setup.cfg
+++ b/setup.cfg
@@ -12,8 +12,8 @@ norecursedirs = .* *.egg build conf dist node_modules test_root cms/envs lms/env
 python_classes =
 python_files = tests.py test_*.py tests_*.py *_tests.py __init__.py
 
-[pep8]
-# error codes: http://pep8.readthedocs.org/en/latest/intro.html#error-codes
+[pycodestyle]
+# error codes: https://pycodestyle.readthedocs.io/en/latest/intro.html#error-codes
 # E501: line too long
 # E265: block comment should start with ‘# ‘
 #   We have lots of comments that look like "##### HEADING #####" which violate
