--- a/requirements/edx/base.in
+++ b/requirements/edx/base.in
@@ -24,7 +24,7 @@
 #    as development.in or testing.in instead.
 
 analytics-python==1.1.0             # Used for Segment analytics
-attrs==17.2.0                       # Reduces boilerplate code involving class attributes
+attrs                               # Reduces boilerplate code involving class attributes
 Babel==1.3                          # Internationalization utilities, used for date formatting in a few places
 bleach==1.4                         # Allowed-list-based HTML sanitizing library that escapes or strips markup and attributes; used for capa and LTI
 boto==2.39.0                        # Deprecated version of the AWS SDK; we should stop using this
